--- a/NAMESPACE
+++ b/NAMESPACE
@@ -259,6 +259,9 @@ export(regrid.default)
 export(regrid.matrix)
 export(regrid.field)
 export(regrid.eof)
+export(regrid.station)
+export(regrid.pca)
+export(regrid.irregweights)
 #export(replace.char)
 export(retrieve.ncdf)
 export(retrieve)
