--- a/NAMESPACE
+++ b/NAMESPACE
@@ -227,6 +227,9 @@ export(MVR.default)
 export(MVR.field)
 export(MVR.pca)
 export(MVR.eof)
+export(nearest)
+export(nearest.station)
+export(nearest.field)
 export(nam2expr)
 export(param2ele)
 export(PCA)
