--- a/NAMESPACE
+++ b/NAMESPACE
@@ -442,3 +442,9 @@ export(summary.station)
 export(summary.eof)
 export(summary.cca)
 export(retrieve.rcm)
+export(q5)
+export(q95)
+export(q995)
+export(cv)
+export(trend.coef)
+export(trend.pval)
