--- a/NAMESPACE
+++ b/NAMESPACE
@@ -383,6 +383,7 @@ export(vis.cca)
 export(vis.mvr)
 export(vis.dsensemble )
 export(vis.ds)
+export(allgood)
 export(diagram)
 export(diagram.dsensemble)
 export(diagram.ds)
