--- a/NAMESPACE
+++ b/NAMESPACE
@@ -286,6 +286,7 @@ export(station)
 export(station.default)
 export(station.ecad)
 export(season)
+export(season.default)
 export(season.abb)
 export(sametimescale)
 export(seasevol)
