--- a/NAMESPACE
+++ b/NAMESPACE
@@ -176,6 +176,7 @@ export(DSensemble.default)
 export(DSensemble.t2m)
 export(DSensemble.precip)
 export(DSensemble.mu)
+export(DSensemble.pca)
 export(fig0.zoo)
 export(fig1.zoo)
 export(frame.metno)
