--- a/NAMESPACE
+++ b/NAMESPACE
@@ -335,6 +335,7 @@ export(trend.station)
 export(trend.eof)
 export(trend.field)
 export(trend.zoo)
+export(trend.zoo.multi)
 export(validate)
 export(validate.default)
 export(validate.eof)
