--- a/NAMESPACE
+++ b/NAMESPACE
@@ -308,6 +308,7 @@ export(sst.NCEP)
 export(subset.comb)
 export(subset.station)
 export(subset.eof)
+export(subset.pca)
 export(subset.field)
 export(subset.spell)
 export(subset.cca)
