--- a/NAMESPACE
+++ b/NAMESPACE
@@ -316,6 +316,7 @@ export(subset.mvr)
 export(subset.trend)
 export(subset.corfield)
 export(subset.ds)
+export(subset.zoo)
 export(subset.dsensemble)
 export(summary.ncdf4)
 #export(test.scandinavia)
