Fixed problem with subset (Error in switch(it, `1` = 1, `2` = 4, `3` = 7, `4` = 10, , djf = 1, mam = 4,  :   EXPR must be a length 1 vector) and problem with time shifted DJF eofs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -204,6 +204,8 @@ export(ghcnd.data)
 export(ghcnm.meta)
 export(ghcnm.data)
 export(gridbox)
+export(lag.station)
+export(lag.field)
 export(lonlatprojection)
 export(map2sphere)
 export(map)
