Fixed problem with DS on annual: bug in sametimescale and also modified matchdate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -187,6 +187,7 @@ export(EOF.field)
 export(EOF.comb)
 export(eof2field)
 export(esd2ele)
+export(err)
 export(exceedance)
 export(exceedance.default)
 export(exceedance.station)
