Fixed some minor bugs in aggregate (error estimates) and made select.station more userfriendly (tell you what goes wrong)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ export(CCA.eof)
 export(CCA.pca)
 export(CCA.field)
 export(check.ncdf4)
+export(clean.station)
 export(climatology)
 export(climatology.default)
 export(climatology.field)
