--- a/NAMESPACE
+++ b/NAMESPACE
@@ -157,6 +157,10 @@ export(diagnose.mvr)
 export(diagnose.cca)
 export(diagnose.dsensemble)
 export(diagnose.station)
+export(diagram)
+export(diagram.dsensemble)
+export(diagram.ds)
+export(diagram.station)
 export(distAB)
 export(DS)
 export(DS.default)
@@ -393,9 +397,7 @@ export(vis.mvr)
 export(vis.dsensemble )
 export(vis.ds)
 export(allgood)
-export(diagram)
-export(diagram.dsensemble)
-export(diagram.ds)
+
 export(nevents)
 export(wetmean)
 export(as.seasons)
