Revised subset.field - more in line with subset.station

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -309,10 +309,10 @@ export(station.ghcnm)
 export(station.metnom)
 export(station.metnod)
 export(station.nordklim)
-export(station.subset)
 export(stnr)
 export(sst.DNMI)
 export(sst.NCEP)
+export(default.subset)
 export(subset.comb)
 export(subset.station)
 export(subset.eof)
