--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ export(as.field.zoo)
 export(as.field.eof)
 export(as.field.comb)
 export(as.field.field)
+export(as.field.ds)
 export(as.field.station)
 export(as.fitted.values)
 export(as.fitted.values.ds)
