new function: DSensemble.mu.worstcase

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -182,6 +182,7 @@ export(DSensemble.default)
 export(DSensemble.t2m)
 export(DSensemble.precip)
 export(DSensemble.mu)
+export(DSensemble.mu.worstcase)
 export(DSensemble.pca)
 export(fig0.zoo)
 export(fig1.zoo)
