--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,7 @@ export(as.residual)
 export(as.residual.ds)
 export(as.residual.station)
 export(as.stand)
+export(as.storm)
 export(as.original)
 export(as.stand.station)
 export(as.original.station)
