--- a/NAMESPACE
+++ b/NAMESPACE
@@ -329,6 +329,7 @@ export(subset.corfield)
 export(subset.ds)
 export(subset.zoo)
 export(subset.dsensemble)
+export(subset.storm)
 export(summary.ncdf4)
 #export(test.scandinavia)
 export(t2m.DNMI)
