--- a/NAMESPACE
+++ b/NAMESPACE
@@ -464,3 +464,9 @@ export(q995)
 export(cv)
 export(trend.coef)
 export(trend.pval)
+
+export(year.storm)
+export(month.storm)
+export(season.storm)
+export(slp.storm)
+export(sort.storm)
