--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(anomaly.comb)
 export(anomaly.station)
 export(anomaly.annual)
 export(anomaly.month)
+export(anomaly.storm)
 export(aspect)
 export(month)
 export(day)
