--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(aggregate.comb)
 export(aggregate.field)
 export(aggregate.station)
 export(aggregate.area)
+export(aggregate.storm)
 export(alt)
 export(annual)
 export(annual.default)
