--- a/NAMESPACE
+++ b/NAMESPACE
@@ -234,6 +234,7 @@ export(map.field)
 export(map.corfield)
 export(map.trend)
 export(map.googleearth)
+export(map.storm)
 export(matchdate)
 export(MET.no.meta)
 export(MVR)
