--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,6 +105,8 @@ export(as.station.field)
 export(as.station.spell)
 export(as.station.zoo)
 export(as.station.eof)
+export(binscatter.hex)
+export(binscatter.sunflower)
 export(calendar)
 export(CCA)
 export(CCA.default)
