--- a/NAMESPACE
+++ b/NAMESPACE
@@ -237,6 +237,8 @@ export(map.corfield)
 export(map.trend)
 export(map.googleearth)
 export(map.storm)
+export(map.hexbin.storm)
+export(map.sunflower.storm)
 export(matchdate)
 export(MET.no.meta)
 export(MVR)
