--- a/NAMESPACE
+++ b/NAMESPACE
@@ -254,6 +254,8 @@ export(param2ele)
 export(PCA)
 export(PCA.station)
 export(pca2station)
+export(PCA.storm)
+export(pca2storm)
 export(plot.station)
 export(plot.eof)
 export(plot.eof.field)
