--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ export(aggregate.comb)
 export(aggregate.field)
 export(aggregate.station)
 export(aggregate.area)
-export(aggregate.storm)
 export(alt)
 export(annual)
 export(annual.default)
@@ -480,3 +479,4 @@ export(season.storm)
 export(slp.storm)
 export(sort.storm)
 export(polyfit.storm)
+export(count.storm)
