--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,8 +104,6 @@ export(as.station.field)
 export(as.station.spell)
 export(as.station.zoo)
 export(as.station.eof)
-export(binscatter.hex)
-export(binscatter.sunflower)
 export(calendar)
 export(CCA)
 export(CCA.default)
@@ -290,6 +288,8 @@ export(retrieve.ncdf)
 export(retrieve)
 export(retrieve.ncdf4)
 export(rotM)
+export(scatter.hexbin)
+export(scatter.sunflower)
 export(select)
 export(select.default)
 export(select.station)
