--- a/NAMESPACE
+++ b/NAMESPACE
@@ -234,6 +234,7 @@ export(map.corfield)
 export(map.trend)
 export(map.googleearth)
 export(map.storm)
+export(map.pca.storm)
 export(map.hexbin.storm)
 export(map.sunflower.storm)
 export(matchdate)
@@ -262,6 +263,7 @@ export(plot.ds)
 export(plot.field)
 export(plot.spell)
 export(plot.pca)
+export(plot.pca.storm)
 export(plot.mvr)
 export(plot.cca)
 export(plot.dsensemble)
