--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(as.calibrationdata.station)
 export(as.eof)
 export(as.eof.comb)
 export(as.eof.zoo)
+export(as.eof.ds)
 export(as.eof.eof)
 export(as.eof.field)
 export(as.eof.appendix)
