--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,7 +145,6 @@ export(crossval.list)
 export(corfield)
 export(corfield.default)
 export(corfield.zoo)
-export(corfield.field)
 export(corfield.station)
 export(corfield.field.station)
 export(corfield.eof)
@@ -409,8 +408,9 @@ export(vis.eof)
 export(vis.spell)
 export(vis.cca)
 export(vis.mvr)
-export(vis.dsensemble )
+export(vis.dsensemble)
 export(vis.ds)
+export(vis.trends)
 export(allgood)
 
 export(nevents)
