col.bar added to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,6 +127,7 @@ export(cmip5.model_id)
 export(cntr)
 export(colscal)
 export(colbar)
+export(col.bar)
 export(combine)
 export(combine.default)
 export(combine.station)
