Create project.ds() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -277,6 +277,9 @@ export(predict.mvr)
 export(predict.cca)
 export(predict.ds.eof)
 export(predict.ds.comb)
+
+export(project.ds)
+
 export(regrid.weights)
 export(regrid)
 export(regrid.default)
