fixed bug in as.monthly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,7 +127,6 @@ export(cmip5.model_id)
 export(cntr)
 export(colscal)
 export(colbar)
-export(col.bar)
 export(combine)
 export(combine.default)
 export(combine.station)
@@ -277,9 +276,7 @@ export(predict.mvr)
 export(predict.cca)
 export(predict.ds.eof)
 export(predict.ds.comb)
-
 export(project.ds)
-
 export(regrid.weights)
 export(regrid)
 export(regrid.default)
@@ -446,6 +443,16 @@ export(HadCRUT4)
 export(C.C.eq)
 export(is.T)
 export(is.precip)
+export(is.field)
+export(is.station)
+export(is.eof)
+export(is.pca)
+export(is.cca)
+export(is.storm)
+export(is.daily)
+export(is.monthly)
+export(is.seasonal)
+export(is.annual)
 export(iid.test)
 export(iid.test.station)
 export(iid.test.field)
@@ -488,5 +495,3 @@ export(sort.storm)
 export(polyfit.storm)
 export(count.storm)
 export(approx.lon)
-
-export(exit)
