added S3 to as.monthly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,8 @@ export(as.field.station)
 export(as.fitted.values)
 export(as.fitted.values.ds)
 export(as.monthly)
+export(as.monthly.station)
+export(as.monthly.field)
 #export(as.observed.station)
 export(as.original.data)
 export(as.original.data.ds)
