bugfix in corfield/NAMESPACE and minor edit in DSensemble.mu.worstcase

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -147,6 +147,7 @@ export(crossval.list)
 export(corfield)
 export(corfield.default)
 export(corfield.zoo)
+export(corfield.field)
 export(corfield.station)
 export(corfield.field.station)
 export(corfield.eof)
