--- a/NAMESPACE
+++ b/NAMESPACE
@@ -498,4 +498,4 @@ export(sort.storm)
 export(polyfit.storm)
 export(count.storm)
 export(approx.lon)
-export(mildwinterdays)
+export(coldwinterdays)
