--- a/NAMESPACE
+++ b/NAMESPACE
@@ -335,6 +335,8 @@ export(subset.station)
 export(subset.eof)
 export(subset.pca)
 export(subset.field)
+export(subset.matrix)
+export(subset.pattern)
 export(subset.spell)
 export(subset.cca)
 export(subset.mvr)
@@ -342,6 +344,7 @@ export(subset.trend)
 export(subset.corfield)
 export(subset.ds)
 export(subset.zoo)
+export(subset.matrix)
 export(subset.dsensemble)
 export(subset.storm)
 export(summary.ncdf4)
