--- a/NAMESPACE
+++ b/NAMESPACE
@@ -497,6 +497,9 @@ export(year.storm)
 export(month.storm)
 export(season.storm)
 export(slp.storm)
+export(lat.storm)
+export(lon.storm)
+export(length.storm)
 export(sort.storm)
 export(polyfit.storm)
 export(count.storm)
