--- a/NAMESPACE
+++ b/NAMESPACE
@@ -414,6 +414,7 @@ export(vis.field)
 export(vis.eof)
 export(vis.spell)
 export(vis.cca)
+export(vis.pca)
 export(vis.mvr)
 export(vis.dsensemble)
 export(vis.ds)
