--- a/NAMESPACE
+++ b/NAMESPACE
@@ -503,6 +503,7 @@ export(length.storm)
 export(sort.storm)
 export(polyfit.storm)
 export(count.storm)
+export(plot.storm)
 export(approx.lon)
 export(coldwinterdays)
 export(qqgeom)
