revised anomaly and DS.pca

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -507,3 +507,7 @@ export(plot.storm)
 export(approx.lon)
 export(coldwinterdays)
 export(qqgeom)
+export(anomaly.day)
+export(map.array)
+export(validate.cca)
+export(validate.pca)
