--- a/NAMESPACE
+++ b/NAMESPACE
@@ -278,6 +278,7 @@ export(predict.ds)
 export(predict.mvr)
 export(predict.cca)
 export(predict.ds.eof)
+export(predict.ds.pca)
 export(predict.ds.comb)
 export(project.ds)
 export(regrid.weights)
