--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(as.eof.ds)
 export(as.eof.eof)
 export(as.eof.field)
 export(as.eof.appendix)
+export(as.eof.list)
 export(as.comb)
 export(as.comb.eof)
 export(as.climatology)
