Add is.months - is.years - is.seasons & is.dates in is.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -458,9 +458,13 @@ export(is.pca)
 export(is.cca)
 export(is.storm)
 export(is.daily)
+export(is.dates)
 export(is.monthly)
+export(is.months)
 export(is.seasonal)
+export(is.seasons)
 export(is.annual)
+export(is.years)
 export(iid.test)
 export(iid.test.station)
 export(iid.test.field)
