--- a/NAMESPACE
+++ b/NAMESPACE
@@ -466,6 +466,7 @@ export(is.seasons)
 export(is.annual)
 export(is.years)
 export(iid.test)
+export(iid.test.default)
 export(iid.test.station)
 export(iid.test.field)
 export(test.iid.test)
