some small additions: filt and diagnose.distr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -164,6 +164,7 @@ export(diagnose.mvr)
 export(diagnose.cca)
 export(diagnose.dsensemble)
 export(diagnose.station)
+export(diagnose.distr)
 export(diagram)
 export(diagram.dsensemble)
 export(diagram.ds)
@@ -516,3 +517,6 @@ export(anomaly.day)
 export(map.array)
 export(validate.cca)
 export(validate.pca)
+
+export(filt)
+export(filt.default)
