--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,6 @@ export(anomaly.comb)
 export(anomaly.station)
 export(anomaly.annual)
 export(anomaly.month)
-export(anomaly.storm)
 export(aspect)
 export(month)
 export(day)
@@ -143,7 +142,7 @@ export(combine.field)
 export(combine.list)
 export(combine.zoo)
 export(crossval)
-export(crossval.ds)
+export(crossval.ds)as
 export(crossval.list)
 export(corfield)
 export(corfield.default)
@@ -238,10 +237,6 @@ export(map.field)
 export(map.corfield)
 export(map.trend)
 export(map.googleearth)
-export(map.storm)
-export(map.pca.storm)
-export(map.hexbin.storm)
-export(map.sunflower.storm)
 export(matchdate)
 export(MET.no.meta)
 export(MVR)
@@ -457,7 +452,6 @@ export(is.station)
 export(is.eof)
 export(is.pca)
 export(is.cca)
-export(is.storm)
 export(is.daily)
 export(is.dates)
 export(is.monthly)
@@ -501,6 +495,35 @@ export(cv)
 export(trend.coef)
 export(trend.pval)
 
+export(coldwinterdays)
+export(qqgeom)
+export(anomaly.day)
+export(map.array)
+export(validate.cca)
+export(validate.pca)
+
+export(filt)
+export(filt.default)
+
+export(as.trajectory)
+export(is.trajectory)
+export(anomaly.trajectory)
+export(map.trajectory)
+export(map.pca.trajectory)
+export(season.trajectory)
+export(param.trajectory)
+export(sort.trajectory)
+export(pfit.trajectory)
+export(count.trajectory)
+export(plot.trajectory)
+export(fnlon)
+export(approxlon)
+
+export(anomaly.storm)
+export(map.storm)
+export(map.pca.storm)
+export(map.hexbin.storm)
+export(map.sunflower.storm)
 export(season.storm)
 export(slp.storm)
 export(lat.storm)
@@ -511,12 +534,3 @@ export(polyfit.storm)
 export(count.storm)
 export(plot.storm)
 export(approx.lon)
-export(coldwinterdays)
-export(qqgeom)
-export(anomaly.day)
-export(map.array)
-export(validate.cca)
-export(validate.pca)
-
-export(filt)
-export(filt.default)
