--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,7 +94,6 @@ export(as.residual)
 export(as.residual.ds)
 export(as.residual.station)
 export(as.stand)
-export(as.storm)
 export(as.original)
 export(as.stand.station)
 export(as.original.station)
@@ -252,8 +251,6 @@ export(param2ele)
 export(PCA)
 export(PCA.station)
 export(pca2station)
-export(PCA.storm)
-export(pca2storm)
 export(plot.station)
 export(plot.eof)
 export(plot.eof.field)
@@ -263,7 +260,6 @@ export(plot.ds)
 export(plot.field)
 export(plot.spell)
 export(plot.pca)
-export(plot.pca.storm)
 export(plot.mvr)
 export(plot.cca)
 export(plot.dsensemble)
@@ -344,7 +340,6 @@ export(subset.ds)
 export(subset.zoo)
 export(subset.matrix)
 export(subset.dsensemble)
-export(subset.storm)
 export(summary.ncdf4)
 #export(test.scandinavia)
 export(t2m.DNMI)
@@ -507,9 +502,12 @@ export(filt.default)
 
 export(as.trajectory)
 export(is.trajectory)
+export(PCA.trajectory)
+export(pca2trajectory)
 export(anomaly.trajectory)
 export(map.trajectory)
 export(map.pca.trajectory)
+export(plot.pca.trajectory)
 export(season.trajectory)
 export(param.trajectory)
 export(sort.trajectory)
@@ -518,10 +516,16 @@ export(count.trajectory)
 export(plot.trajectory)
 export(fnlon)
 export(approxlon)
+export(subset.trajectory)
 
+export(as.storm)
+export(is.storm)
+export(PCA.storm)
+export(pca2storm)
 export(anomaly.storm)
 export(map.storm)
 export(map.pca.storm)
+export(plot.pca.storm)
 export(map.hexbin.storm)
 export(map.sunflower.storm)
 export(season.storm)
@@ -534,3 +538,5 @@ export(polyfit.storm)
 export(count.storm)
 export(plot.storm)
 export(approx.lon)
+export(subset.storm)
+
