--- a/NAMESPACE
+++ b/NAMESPACE
@@ -506,6 +506,8 @@ export(PCA.trajectory)
 export(pca2trajectory)
 export(anomaly.trajectory)
 export(map.trajectory)
+export(map.hexbin.trajectory)
+export(map.sunflower.trajectory)
 export(map.pca.trajectory)
 export(plot.pca.trajectory)
 export(season.trajectory)
