--- a/NAMESPACE
+++ b/NAMESPACE
@@ -505,6 +505,7 @@ export(is.trajectory)
 export(PCA.trajectory)
 export(pca2trajectory)
 export(anomaly.trajectory)
+export(anomaly2trajectory)
 export(map.trajectory)
 export(map.hexbin.trajectory)
 export(map.sunflower.trajectory)
