fixed bugs in trajectory tools

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -514,7 +514,7 @@ export(plot.pca.trajectory)
 export(season.trajectory)
 export(param.trajectory)
 export(sort.trajectory)
-export(pfit.trajectory)
+export(polyfit.trajectory)
 export(count.trajectory)
 export(plot.trajectory)
 export(fnlon)
