updated trajectory functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -500,8 +500,12 @@ export(validate.pca)
 export(filt)
 export(filt.default)
 
+export(trajectory)
 export(as.trajectory)
 export(is.trajectory)
+export(trajectory2station)
+export(trajectory2field)
+export(read.imilast)
 export(PCA.trajectory)
 export(pca2trajectory)
 export(anomaly.trajectory)
