--- a/NAMESPACE
+++ b/NAMESPACE
@@ -505,12 +505,14 @@ export(as.trajectory)
 export(is.trajectory)
 export(trajectory2station)
 export(trajectory2field)
+export(density.trajectory)
 export(read.imilast)
 export(PCA.trajectory)
 export(pca2trajectory)
 export(anomaly.trajectory)
 export(anomaly2trajectory)
 export(map.trajectory)
+export(map.density.trajectory)
 export(map.hexbin.trajectory)
 export(map.sunflower.trajectory)
 export(map.pca.trajectory)
