Update in NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(as.4seasons.station)
 export(as.4seasons.day)
 export(as.4seasons.spell)
 export(as.4seasons.field)
+export(as.4seasons.dsensemble)
 export(as.annual)
 export(as.annual.default)
 export(as.annual.numeric)
