--- a/NAMESPACE
+++ b/NAMESPACE
@@ -181,6 +181,7 @@ export(DS.precip.season.field)
 export(DS.freq)
 export(DS.spell)
 export(DS.pca)
+export(DS.seasonalcycle)
 export(DSensemble)
 export(DSE)
 export(DSensemble.default)
