--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: esd
-Version: 0.9-5
-Date: April 09 2015
+Version: 0.9-6
+Date: May 27 2015
 Title: Climate analysis and empirical-statistical downscaling (ESD) package for
     monthly and daily data.
-Author: Rasmus E. Benestad <rasmus.benestad@physics.org> and Abdelkader Mezghani
+Author: Rasmus E. Benestad <rasmus.benestad@physics.org>, Abdelkader Mezghani, and Kajsa M. Parding
 Maintainer: Rasmus E. Benestad <rasmus.benestad@physics.org>
 Depends:
     ncdf,
