--- a/NAMESPACE
+++ b/NAMESPACE
@@ -183,6 +183,7 @@ export(DS.freq)
 export(DS.spell)
 export(DS.pca)
 export(DS.seasonalcycle)
+export(DS.seasonalcycle)
 export(DSensemble)
 export(DSE)
 export(DSensemble.default)
