--- a/NAMESPACE
+++ b/NAMESPACE
@@ -537,8 +537,9 @@ export(DS.trajectory)
 #export(dT)
 #export(regfit)
 
-export(prob)
-export(prob.default)
-export(prob.station)
-export(prob.station.precip)
-export(nino3.4)
+export(histwet)
+export(visprob)
+export(visprob.default)
+export(visprob.station)
+export(visprob.station.precip)
+export(NINO3.4)
