--- a/NAMESPACE
+++ b/NAMESPACE
@@ -494,6 +494,7 @@ export(trend.coef)
 export(trend.pval)
 
 export(coldwinterdays)
+export(heatwaves)
 export(qqgeom)
 export(anomaly.day)
 export(map.array)
