--- a/NAMESPACE
+++ b/NAMESPACE
@@ -494,7 +494,9 @@ export(trend.coef)
 export(trend.pval)
 
 export(coldwinterdays)
-export(heatwaves)
+export(coldspells)
+export(heatwavespells)
+export(hotsummerdays)
 export(qqgeom)
 export(anomaly.day)
 export(map.array)
