--- a/NAMESPACE
+++ b/NAMESPACE
@@ -497,6 +497,7 @@ export(coldwinterdays)
 export(coldspells)
 export(heatwavespells)
 export(hotsummerdays)
+export(nwetdays)
 export(qqgeom)
 export(anomaly.day)
 export(map.array)
