added nwetdays and plot.nevents

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -269,6 +269,7 @@ export(plot.dsensemble)
 export(plot.xval)
 export(plot.diagnose)
 export(plot.diagnose.comb.eof)
+export(plot.nevents)
 export(precip.ERAINT)
 export(predict.ds)
 export(predict.mvr)
