colbar.ini added to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -129,6 +129,7 @@ export(cmip5.model_id)
 export(cntr)
 export(colscal)
 export(colbar)
+export(colbar.ini)
 export(combine)
 export(combine.default)
 export(combine.station)
