--- a/NAMESPACE
+++ b/NAMESPACE
@@ -539,10 +539,11 @@ export(subset.trajectory)
 export(corfield.trajectory)
 export(DS.trajectory)
 
-#export(dX)
-#export(dY)
-#export(dT)
-#export(regfit)
+export(CCI)
+export(dX)
+export(dY)
+export(dT)
+export(regfit)
 
 export(histwet)
 export(visprob)
