--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: esd
-Version: 0.9-6
+Version: 1.0
 Date: May 27 2015
 Title: Climate analysis and empirical-statistical downscaling (ESD) package for
     monthly and daily data.
