--- a/NAMESPACE
+++ b/NAMESPACE
@@ -157,6 +157,7 @@ export(cumugram)
 export(diagnose)
 export(diagnose.default)
 export(diagnose.ds)
+export(diagnose.ds.pca)
 export(diagnose.eof)
 export(diagnose.comb.eof)
 export(diagnose.comb)
