--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ export(as.comb)
 export(as.comb.eof)
 export(as.climatology)
 export(as.ds)
+export(as.events)
 export(as.field)
 export(as.field.default)
 export(as.field.zoo)
@@ -101,6 +102,7 @@ export(as.original.station)
 export(as.station)
 export(as.station.data.frame)
 export(as.station.ds)
+export(as.station.dsensemble.pca)
 export(as.station.pca)
 export(as.station.list)
 export(as.station.field)
