--- a/NAMESPACE
+++ b/NAMESPACE
@@ -348,6 +348,7 @@ export(subset.ds)
 export(subset.zoo)
 export(subset.matrix)
 export(subset.dsensemble)
+export(subset.events)
 export(summary.ncdf4)
 #export(test.scandinavia)
 export(t2m.DNMI)
