--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(as.field.comb)
 export(as.field.field)
 export(as.field.ds)
 export(as.field.station)
+export(as.field.events)
 export(as.fitted.values)
 export(as.fitted.values.ds)
 export(as.monthly)
@@ -542,6 +543,8 @@ export(approxlon)
 export(subset.trajectory)
 export(corfield.trajectory)
 export(DS.trajectory)
+
+export(events2field)
 
 export(CCI)
 export(dX)
