--- a/NAMESPACE
+++ b/NAMESPACE
@@ -265,6 +265,8 @@ export(plot.eof.field)
 export(plot.eof.comb)
 export(plot.eof.var)
 export(plot.ds)
+export(plot.ds.pca)
+export(plot.ds.eof)
 export(plot.field)
 export(plot.spell)
 export(plot.pca)
