--- a/NAMESPACE
+++ b/NAMESPACE
@@ -418,6 +418,7 @@ export(vis.cca)
 export(vis.pca)
 export(vis.mvr)
 export(vis.dsensemble)
+export(vis.dsensemble.pca)
 export(vis.ds)
 export(vis.trends)
 export(allgood)
