--- a/NAMESPACE
+++ b/NAMESPACE
@@ -194,6 +194,7 @@ export(DSE)
 export(DSensemble.default)
 export(DSensemble.t2m)
 export(DSensemble.precip)
+export(DSensemble.annual)
 export(DSensemble.mu)
 export(DSensemble.mu.worstcase)
 export(DSensemble.pca)
