--- a/NAMESPACE
+++ b/NAMESPACE
@@ -565,3 +565,6 @@ export(visprob.station.precip)
 export(NINO3.4)
 export(NAO)
 export(figlab)
+export(fitpc)
+export(pcafill)
+export(pcafill.test)
