updated vis.dsensemble.list and diagnos.dsensemble.list

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -423,7 +423,7 @@ export(vis.cca)
 export(vis.pca)
 export(vis.mvr)
 export(vis.dsensemble)
-export(vis.dsensemble.pca)
+export(vis.dsensemble.list)
 export(vis.ds)
 export(vis.trends)
 export(allgood)
