updated trajectory functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(as.comb.eof)
 export(as.climatology)
 export(as.ds)
 export(as.events)
+export(as.events.default)
 export(as.field)
 export(as.field.default)
 export(as.field.zoo)
@@ -521,6 +522,7 @@ export(filt.default)
 
 export(trajectory)
 export(as.trajectory)
+export(as.trajectory.events)
 export(is.trajectory)
 export(trajectory2station)
 export(trajectory2field)
@@ -553,6 +555,7 @@ export(map.events)
 export(Track.events)
 export(NearestNeighbour)
 export(Trackstats)
+export(factor2numeric)
 
 export(CCI)
 export(dX)
