--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ export(as.field.field)
 export(as.field.ds)
 export(as.field.station)
 export(as.field.events)
+export(as.field.trajectory)
 export(as.fitted.values)
 export(as.fitted.values.ds)
 export(as.monthly)
