updated and added cyclone analysis tools

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,9 +109,11 @@ export(as.station.dsensemble.pca)
 export(as.station.pca)
 export(as.station.list)
 export(as.station.field)
+export(as.station.events)
 export(as.station.spell)
 export(as.station.zoo)
 export(as.station.eof)
+export(as.station.trajectory)
 export(calendar)
 export(CCA)
 export(CCA.default)
@@ -553,6 +555,8 @@ export(DS.trajectory)
 
 export(events2field)
 export(map.events)
+export(count.events)
+export(param.events)
 export(Track.events)
 export(NearestNeighbour)
 export(Trackstats)
