--- a/NAMESPACE
+++ b/NAMESPACE
@@ -575,6 +575,7 @@ export(visprob.station)
 export(visprob.station.precip)
 export(NINO3.4)
 export(NAO)
+export(SOI)
 export(figlab)
 export(fitpc)
 export(pcafill)
