--- a/NAMESPACE
+++ b/NAMESPACE
@@ -582,3 +582,5 @@ export(pcafill)
 export(pcafill.test)
 export(vis.map)
 export(plot.diagnose.dsensemble)
+export(plot.diagnose.matrix)
+export(diagnose.matrix)
