read data from NASA/GISS and cool plotting - vis.dsensemble

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -585,3 +585,6 @@ export(plot.diagnose.dsensemble)
 export(plot.diagnose.matrix)
 export(diagnose.matrix)
 export(ndig)
+export(NASAgiss)
+export(balls)
+export(vis.default)
