--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,8 +64,6 @@ export(as.comb)
 export(as.comb.eof)
 export(as.climatology)
 export(as.ds)
-export(as.events)
-export(as.events.default)
 export(as.field)
 export(as.field.default)
 export(as.field.zoo)
@@ -553,6 +551,12 @@ export(subset.trajectory)
 export(corfield.trajectory)
 export(DS.trajectory)
 
+export(as.events)
+export(as.events.default)
+export(as.events.trajectory)
+export(events)
+export(trajectory2events)
+export(events2trajectory)
 export(events2field)
 export(map.events)
 export(count.events)
