--- a/NAMESPACE
+++ b/NAMESPACE
@@ -527,7 +527,6 @@ export(as.trajectory.events)
 export(is.trajectory)
 export(trajectory2station)
 export(trajectory2field)
-export(density.trajectory)
 export(read.imilast)
 export(PCA.trajectory)
 export(pca2trajectory)
@@ -547,6 +546,7 @@ export(count.trajectory)
 export(plot.trajectory)
 export(fnlon)
 export(approxlon)
+export(approx.lonlat)
 export(subset.trajectory)
 export(corfield.trajectory)
 export(DS.trajectory)
@@ -565,6 +565,10 @@ export(Track.events)
 export(NearestNeighbour)
 export(Trackstats)
 export(factor2numeric)
+
+export(density.trajectory)
+export(density.events)
+export(trackdensity)
 
 export(CCI)
 export(dX)
