fixed problem with graph

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -591,5 +591,7 @@ export(vis.default)
 export(GSL)
 export(graph)
 export(graph.default)
+export(graph.dsensemble)
 export(mask)
 export(is.model)
+export(ylab)
