added functions to read the sea level

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -606,3 +606,6 @@ export(ylab)
 export(graph.list)
 export(graph.zoo)
 export(plot.list)
+export(station.sonel)
+export(station.gloss)
+export(station.newlyn)
