updated tracking.events in NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -561,8 +561,9 @@ export(events2field)
 export(map.events)
 export(count.events)
 export(param.events)
-export(Track.events)
-export(NearestNeighbour)
+export(tracking.events)
+export(Track)
+export(Track123)
 export(Trackstats)
 export(factor2numeric)
 
