--- a/NAMESPACE
+++ b/NAMESPACE
@@ -276,6 +276,7 @@ export(plot.pca)
 export(plot.mvr)
 export(plot.cca)
 export(plot.dsensemble)
+export(plot.dsensemble.pca)
 export(plot.xval)
 export(plot.diagnose)
 export(plot.diagnose.comb.eof)
