--- a/NAMESPACE
+++ b/NAMESPACE
@@ -562,7 +562,7 @@ export(events2field)
 export(map.events)
 export(count.events)
 export(param.events)
-export(tracking.events)
+export(track.events)
 export(Track)
 export(Track123)
 export(Trackstats)
