--- a/NAMESPACE
+++ b/NAMESPACE
@@ -562,11 +562,15 @@ export(events2field)
 export(map.events)
 export(count.events)
 export(param.events)
+export(factor2numeric)
+
+export(track)
+export(track.default)
 export(track.events)
+export(track.trajectory)
 export(Track)
 export(Track123)
 export(Trackstats)
-export(factor2numeric)
 
 export(density.trajectory)
 export(density.events)
