--- a/NAMESPACE
+++ b/NAMESPACE
@@ -615,3 +615,7 @@ export(station.sonel)
 export(station.gloss)
 export(station.newlyn)
 export(sort.station)
+export(manual)
+export(ABC4ESD)
+export(esd.tips)
+export(esd.issues)
