Add new function barplot.station

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,6 +113,7 @@ export(as.station.zoo)
 export(as.station.eof)
 export(as.station.trajectory)
 export(calendar)
+export(barplot.station)
 export(CCA)
 export(CCA.default)
 export(CCA.eof)
