--- a/NAMESPACE
+++ b/NAMESPACE
@@ -627,3 +627,10 @@ export(manual)
 export(ABC4ESD)
 export(esd.tips)
 export(esd.issues)
+export(esd2ncdf4)
+export(esd2ncdf4.default)
+export(esd2ncdf4.field)
+export(esd2ncdf4.station)
+export(esd2ncdf4.eof)
+export(esd2ncdf4.pca)
+export(esd2ncdf4.dsensemble)
