AMO DSensemble.pca DSensemble.mu.worstcase

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -611,6 +611,7 @@ export(NASAgiss)
 export(balls)
 export(vis.default)
 export(GSL)
+export(AMO)
 export(graph)
 export(graph.default)
 export(graph.dsensemble)
