--- a/NAMESPACE
+++ b/NAMESPACE
@@ -552,7 +552,7 @@ export(approx.lonlat)
 export(subset.trajectory)
 export(corfield.trajectory)
 export(DS.trajectory)
-
+export(stand)
 export(calculate.cyclonebudget)
 export(plot.cyclonebudget)
 
