--- a/NAMESPACE
+++ b/NAMESPACE
@@ -639,3 +639,5 @@ export(esd2ncdf4.dsensemble)
 export(ensemblemean)
 export(propchange)
 export(TGW)
+export(geostrophicwind.field)
+export(geostrophicwind.station)
