--- a/NAMESPACE
+++ b/NAMESPACE
@@ -639,5 +639,6 @@ export(esd2ncdf4.dsensemble)
 export(ensemblemean)
 export(propchange)
 export(TGW)
+export(geostrophicwind)
 export(geostrophicwind.field)
 export(geostrophicwind.station)
