write2ncdf4 and demo(pca2eof)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -438,10 +438,13 @@ export(as.seasons)
 export(HDD)
 export(CDD)
 export(GDD)
-export(save2ncdf)
-export(save2ncdf.station)
-export(write.ncdf)
-export(write.ncdf.station)
+export(write2ncdf4)
+export(write2ncdf4.default)
+export(write2ncdf4.field)
+export(write2ncdf4.station)
+export(write2ncdf4.eof)
+export(write2ncdf4.pca)
+export(write2ncdf4.dsensemble)
 export(retrieve.default)
 export(retrieve.ncdf)
 export(check.ncdf)
@@ -629,13 +632,6 @@ export(manual)
 export(ABC4ESD)
 export(esd.tips)
 export(esd.issues)
-export(esd2ncdf4)
-export(esd2ncdf4.default)
-export(esd2ncdf4.field)
-export(esd2ncdf4.station)
-export(esd2ncdf4.eof)
-export(esd2ncdf4.pca)
-export(esd2ncdf4.dsensemble)
 export(ensemblemean)
 export(propchange)
 export(TGW)
