added Enumerate to NAMESPACE (for event objects after tracking)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -577,6 +577,7 @@ export(track.events)
 export(Track)
 export(Track123)
 export(Trackstats)
+export(Enumerate)
 
 export(trackfilter)
 export(trackfilter.events)
