--- a/NAMESPACE
+++ b/NAMESPACE
@@ -383,6 +383,7 @@ export(validate.eof)
 export(validate.eof.field)
 export(validate.eof.comb)
 export(validate.ds)
+export(validate.dsensemble)
 #export(replacechars)
 #export(cmip35.global)
 export(year)
