start adding DSensemble.field and DSensemble.station

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -201,6 +201,8 @@ export(DSensemble.annual)
 export(DSensemble.mu)
 export(DSensemble.mu.worstcase)
 export(DSensemble.pca)
+export(DSensemble.field)
+export(DSensemble.station)
 export(fig0.zoo)
 export(fig1.zoo)
 export(frame.metno)
