as.residual.field

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,6 +96,7 @@ export(as.pca.station)
 export(as.residual)
 export(as.residual.ds)
 export(as.residual.station)
+export(as.residual.field)
 export(as.stand)
 export(as.original)
 export(as.stand.station)
