is.de is.dsensemble

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -466,6 +466,8 @@ export(cbind.field)
 export(HadCRUT4)
 export(C.C.eq)
 export(is.T)
+export(is.ds)
+export(is.dsensemble)
 export(is.precip)
 export(is.field)
 export(is.station)
