added combine.trajectory and combine.events

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -149,6 +149,8 @@ export(combine.field.station)
 export(combine.field)
 export(combine.list)
 export(combine.zoo)
+export(combine.events)
+export(combine.trajectory)
 export(crossval)
 export(crossval.ds)
 export(crossval.list)
