bugfix in geostrophicwind.field

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -484,6 +484,9 @@ export(is.seasonal)
 export(is.seasons)
 export(is.annual)
 export(is.years)
+export(is.wind)
+export(is.direction)
+export(is.pressure)
 export(iid.test)
 export(iid.test.default)
 export(iid.test.station)
