--- a/NAMESPACE
+++ b/NAMESPACE
@@ -295,6 +295,7 @@ export(predict.ds.eof)
 export(predict.ds.pca)
 export(predict.ds.comb)
 export(project.ds)
+export(records)
 export(regrid.weights)
 export(regrid)
 export(regrid.default)
@@ -372,6 +373,7 @@ export(t2m.MERRA)
 export(t2m.NCEP)
 export(t2m.NorESM.M)
 export(test.EOF)
+export(test.records)
 export(test.retrieve.ncdf4)
 export(test.regrid)
 export(test.regrid2station)
