added DSensemble.eof to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -204,6 +204,7 @@ export(DSensemble.annual)
 export(DSensemble.mu)
 export(DSensemble.mu.worstcase)
 export(DSensemble.pca)
+export(DSensemble.eof)
 export(DSensemble.field)
 export(DSensemble.station)
 export(fig0.zoo)
