map.dsensemble and subset.dsensemble

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -250,6 +250,7 @@ export(map.pca)
 export(map.mvr)
 export(map.cca)
 export(map.ds)
+export(map.dsensemble)
 export(map.field)
 export(map.corfield)
 export(map.trend)
@@ -363,6 +364,7 @@ export(subset.ds)
 export(subset.zoo)
 export(subset.matrix)
 export(subset.dsensemble)
+export(subset.dsensemble.multi)
 export(subset.events)
 export(summary.ncdf4)
 #export(test.scandinavia)
