--- a/NAMESPACE
+++ b/NAMESPACE
@@ -229,6 +229,8 @@ export(g2dl)
 export(g2dl.field)
 export(g2dl.corfield)
 export(g2dl.eof)
+export(g2dl.events)
+export(g2dl.trajectory)
 export(g2dl.default)
 export(ghcnd.meta)
 export(ghcnd.data)
