--- a/NAMESPACE
+++ b/NAMESPACE
@@ -632,6 +632,7 @@ export(balls)
 export(vis.default)
 export(GSL)
 export(AMO)
+export(QBO)
 export(graph)
 export(graph.default)
 export(graph.dsensemble)
