added as.field.dsensemble.eof to as.Rd and NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(as.field.ds)
 export(as.field.station)
 export(as.field.events)
 export(as.field.trajectory)
+export(as.field.dsensemble.eof)
 export(as.fitted.values)
 export(as.fitted.values.ds)
 export(as.monthly)
