as.station.densemble for list of stations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,7 +105,7 @@ export(as.original.station)
 export(as.station)
 export(as.station.data.frame)
 export(as.station.ds)
-export(as.station.dsensemble.pca)
+export(as.station.dsensemble)
 export(as.station.pca)
 export(as.station.list)
 export(as.station.field)
