--- a/NAMESPACE
+++ b/NAMESPACE
@@ -369,6 +369,7 @@ export(subset.matrix)
 export(subset.dsensemble)
 export(subset.dsensemble.multi)
 export(subset.events)
+export(subset.stationmeta)
 export(summary.ncdf4)
 #export(test.scandinavia)
 export(t2m.DNMI)
