--- a/NAMESPACE
+++ b/NAMESPACE
@@ -347,6 +347,7 @@ export(station.ghcnm)
 export(station.metnom)
 export(station.metnod)
 export(station.nordklim)
+export(station.giss)
 export(stnr)
 export(sst.DNMI)
 export(sst.NCEP)
