--- a/NAMESPACE
+++ b/NAMESPACE
@@ -233,6 +233,7 @@ export(g2dl.eof)
 export(g2dl.events)
 export(g2dl.trajectory)
 export(g2dl.default)
+export(g2dl.stationmeta)
 export(ghcnd.meta)
 export(ghcnd.data)
 export(ghcnm.meta)
