--- a/NAMESPACE
+++ b/NAMESPACE
@@ -641,6 +641,7 @@ export(vis.default)
 export(GSL)
 export(AMO)
 export(QBO)
+export(CO2)
 export(graph)
 export(graph.default)
 export(graph.dsensemble)
