--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ export(as.pattern.field)
 export(as.pattern.eof)
 export(as.pattern.cca)
 export(as.pattern.mvr)
+export(as.pattern.matrix)
 export(as.pca)
 export(as.pca.ds)
 export(as.pca.station)
