--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,7 @@ export(as.pattern.eof)
 export(as.pattern.cca)
 export(as.pattern.mvr)
 export(as.pattern.matrix)
+export(as.pattern.array)
 export(as.pca)
 export(as.pca.ds)
 export(as.pca.station)
