--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ export(as.station)
 export(as.station.data.frame)
 export(as.station.ds)
 export(as.station.dsensemble)
+export(as.station.dsensemble.pca)
 export(as.station.pca)
 export(as.station.list)
 export(as.station.field)
