--- a/NAMESPACE
+++ b/NAMESPACE
@@ -669,3 +669,4 @@ export(geostrophicwind)
 export(geostrophicwind.field)
 export(geostrophicwind.station)
 export(windrose)
+export(cmipgcmresolution)
