read.hurdat2 and read.best.track

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -671,3 +671,5 @@ export(geostrophicwind.station)
 export(windrose)
 export(cmipgcmresolution)
 export(expandpca)
+export(read.hurdat2)
+export(read.best.track)
