added as.eof.ensemble - computes the EOF object of multi-model preojections if the predictand is a pca/eof object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(as.eof.zoo)
 export(as.eof.ds)
 export(as.eof.eof)
 export(as.eof.field)
+export(as.eof.dsensemble)
 export(as.eof.appendix)
 export(as.eof.list)
 export(as.comb)
