minor change in as.trajectory

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -504,6 +504,7 @@ export(is.years)
 export(is.wind)
 export(is.direction)
 export(is.pressure)
+export(is.url)
 export(iid.test)
 export(iid.test.default)
 export(iid.test.station)
