--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,7 @@ export(CCA.eof)
 export(CCA.pca)
 export(CCA.field)
 export(check.ncdf4)
+export(check.bad.dates)
 export(clean.station)
 export(climatology)
 export(climatology.default)
