--- a/NAMESPACE
+++ b/NAMESPACE
@@ -371,7 +371,7 @@ export(subset.mvr)
 export(subset.trend)
 export(subset.corfield)
 export(subset.ds)
-export(subset.zoo)
+# export(subset.zoo)
 export(subset.matrix)
 export(subset.dsensemble)
 export(subset.dsensemble.multi)
