--- a/NAMESPACE
+++ b/NAMESPACE
@@ -188,6 +188,7 @@ export(diagram.station)
 export(distAB)
 export(DS)
 export(DS.default)
+export(DS.list)
 export(DS.station)
 export(DS.station.pca)
 export(DS.comb)
