added matchdate.default to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -266,6 +266,7 @@ export(map.corfield)
 export(map.trend)
 export(map.googleearth)
 export(matchdate)
+export(matchdate.default)
 export(matchdate.list)
 export(MET.no.meta)
 export(MVR)
