as.monthly.default & fix for vec

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ export(as.field.dsensemble.eof)
 export(as.fitted.values)
 export(as.fitted.values.ds)
 export(as.monthly)
+export(as.monthly.default)
 export(as.monthly.station)
 export(as.monthly.field)
 #export(as.observed.station)
