added the rain equation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -681,3 +681,7 @@ export(expandpca)
 export(read.hurdat2)
 export(read.best.track)
 export(provenance)
+export(rainequation)
+export(fract.gt.x)
+export(test.rainequation)
+export(scatterplot.rainequation)
