--- a/NAMESPACE
+++ b/NAMESPACE
@@ -683,5 +683,7 @@ export(read.best.track)
 export(provenance)
 export(rainequation)
 export(fract.gt.x)
+export(rmse)
+export(RMSE)
 export(test.rainequation)
 export(scatterplot.rainequation)
