Added the Nash-Sutcliffe efficiency and the Kling-Gupta efficiency functions for 1-D zoo obj

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -687,3 +687,7 @@ export(rmse)
 export(RMSE)
 export(test.rainequation)
 export(scatterplot.rainequation)
+export(nse)
+export(NSE)
+export(kge)
+export(KGE)
