added writen2cdf4.field for netCDF files with more than one variable

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -469,6 +469,7 @@ export(GDD)
 export(write2ncdf4)
 export(write2ncdf4.default)
 export(write2ncdf4.field)
+export(write2ncdf4.list)
 export(write2ncdf4.station)
 export(write2ncdf4.eof)
 export(write2ncdf4.pca)
