retrieve.station and bugfix in write2ncdf4.station

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -324,6 +324,7 @@ export(regrid.irregweights)
 export(retrieve.ncdf)
 export(retrieve)
 export(retrieve.ncdf4)
+export(retrieve.station)
 export(rotM)
 export(scatter.hexbin)
 export(scatter.sunflower)
