REB+HBE added diagnostic for ds with eof predictors, functionality for subset.ds.eof, and an EOF-selection for predictor iterator in rtools (in developement), a function to return R2 for each EOF (eofvar)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -223,6 +223,7 @@ export(EOF)
 export(EOF.default)
 export(EOF.field)
 export(EOF.comb)
+export(eofvar)
 export(eof2field)
 export(esd2ele)
 export(err)
@@ -391,6 +392,8 @@ export(t2m.GHCNM)
 export(t2m.MERRA)
 export(t2m.NCEP)
 export(t2m.NorESM.M)
+export(test.ds.field)
+export(test.num.predictors)
 export(test.EOF)
 export(test.records)
 export(test.retrieve.ncdf4)
@@ -696,3 +699,4 @@ export(KGE)
 export(file.class)
 export(firstyear)
 export(lastyear)
+export(eofvar)
