--- a/NAMESPACE
+++ b/NAMESPACE
@@ -161,6 +161,7 @@ export(combine.trajectory)
 export(crossval)
 export(crossval.ds)
 export(crossval.list)
+export(crossval.dsensemble)
 export(corfield)
 export(corfield.default)
 export(corfield.zoo)
