function to flag anomalous number of record-breacing events: arec

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,9 @@ import(ncdf4)
 import(zoo)
 
 # Exports - in alphabetic order
+export(arec)
+export(arec.default)
+export(arec.station)
 export(aggregate.comb)
 export(aggregate.field)
 export(aggregate.station)
