--- a/NAMESPACE
+++ b/NAMESPACE
@@ -330,6 +330,8 @@ export(retrieve.ncdf)
 export(retrieve)
 export(retrieve.ncdf4)
 export(retrieve.station)
+export(retrieve.default)
+export(retrieve.stationsummary)
 export(rotM)
 export(scatter.hexbin)
 export(scatter.sunflower)
@@ -482,8 +484,6 @@ export(write2ncdf4.station)
 export(write2ncdf4.eof)
 export(write2ncdf4.pca)
 export(write2ncdf4.dsensemble)
-export(retrieve.default)
-export(retrieve.ncdf)
 export(check.ncdf)
 
 export(FTscramble)
@@ -704,3 +704,4 @@ export(file.class)
 export(firstyear)
 export(lastyear)
 export(eofvar)
+export(lastrains)
