--- a/NAMESPACE
+++ b/NAMESPACE
@@ -213,6 +213,7 @@ export(DSensemble.default)
 export(DSensemble.t2m)
 export(DSensemble.precip)
 export(DSensemble.annual)
+export(DSensemble.season)
 export(DSensemble.mu)
 export(DSensemble.mu.worstcase)
 export(DSensemble.pca)
