--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,12 +5,12 @@ Title: Climate analysis and empirical-statistical downscaling (ESD) package for
     monthly and daily data.
 Author: Rasmus E. Benestad <rasmus.benestad@physics.org>, Abdelkader Mezghani, and Kajsa M. Parding
 Maintainer: Rasmus E. Benestad <rasmus.benestad@physics.org>
-Depends: R (>= 2.10.0)
-Imports:
-    ncdf4,
-    zoo
+Depends:
+      ncdf4,
+      zoo,
+      R (>= 2.10.0)
 Suggests:
-    PCICt
+      PCICt
 Description: The package contains R functions for retrieving data, making
     climate analysis and downscaling of monthly mean and daily mean global
     climate scenarios.
