--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: esd
 Version: 1.8
-Date: Oct 30 2018
+Date: Oct 31 2018
 Title: Climate analysis and empirical-statistical downscaling (ESD) package for
     monthly and daily data.
 Author: Rasmus E. Benestad <rasmus.benestad@physics.org>, Abdelkader Mezghani, and Kajsa M. Parding
@@ -10,6 +10,8 @@ Depends:
       zoo,
       R (>= 2.10.0)
 Suggests:
+      LatticeKrig,
+      RgoogleMaps,
       PCICt
 Description: The package contains R functions for retrieving data, making
     climate analysis and downscaling of monthly mean and daily mean global
