added gridmap and gridstation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -208,7 +208,7 @@ export(DS.pca)
 export(DS.seasonalcycle)
 export(DS.seasonalcycle)
 export(DSensemble)
-export(DSE)
+#export(DSE)
 export(DSensemble.default)
 export(DSensemble.t2m)
 export(DSensemble.precip)
@@ -252,6 +252,8 @@ export(ghcnd.data)
 export(ghcnm.meta)
 export(ghcnm.data)
 export(gridbox)
+export(gridmap)
+export(gridstation)
 export(lag.station)
 export(lag.field)
 export(lonlatprojection)
@@ -289,6 +291,7 @@ export(param2ele)
 export(PCA)
 export(PCA.station)
 export(pca2station)
+export(pca2eof)
 export(plot.station)
 export(plot.eof)
 export(plot.eof.field)
@@ -367,6 +370,7 @@ export(station.metnom)
 export(station.metnod)
 export(station.nordklim)
 export(station.giss)
+export(station2field)
 export(stnr)
 export(sst.DNMI)
 export(sst.NCEP)
